--- a/Static/index.html
+++ b/Static/index.html
@@ -19,7 +19,7 @@
     <div class="row">
       <div class="col-xs-12  col-md-9">
         <div id="scatter">
-          <!-- We append our chart here. -->
+          <!-- Append Chart -->
         </div>
       </div>
     </div>
